fix for some 404 errors

--- a/homework2/.env_back
+++ b/homework2/.env_back
@@ -4,7 +4,7 @@ DJANGO_SUPERUSER_PASSWORD='password'
 DJANGO_SECRET_KEY='unen%+=v7wr#d%&rz@u&1n)2h)128&j0y2w&bk73r=03h(+!df'
 DATABASE_HOST='database'
 DATABASE_PORT=5432
-ALLOWED_HOSTS=['127.0.0.1','localhost','backend','frontend','proxy','*']
+DJANGO_ALLOWED_HOSTS='127.0.0.1,localhost,backend,frontend,proxy,*'
 DATABASE_ENGINE='postgresql'
 DATABASE_NAME='django'
 DATABASE_USERNAME='django'
