it works finally

--- a/homework2/.env
+++ b/homework2/.env
@@ -12,3 +12,7 @@ DATABASE_PASSWORD='django'
 PYTHONDONTWRITEBYTECODE=1
 PYTHONUNBUFFERED=1
 DEBUG=True
+
+POSTGRES_USER=django
+POSTGRES_DB=django
+POSTGRES_PASSWORD=django
