--- a/homework2/docker-compose.yaml
+++ b/homework2/docker-compose.yaml
@@ -47,12 +47,18 @@ services:
     networks:
       - catalog-internal
     depends_on:
-      - database
+      database:
+        condition: service_healthy
 
   database:
     restart: always
     image: postgres:12.9-alpine
     container_name: database
+    healthcheck:
+        test: [ "CMD", "pg_isready", "-q"]
+        timeout: 30s
+        interval: 1s
+        retries: 30
     env_file:
       - .env
     ports:
